welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:1: error: Missing closing brace `}' assumed here
def fizzBuzz(a:Int):String = {
^